--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,37 @@
 *{
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
-#header .header{
-    background: url(background.png) no-repeat center;
-    background-size: cover;
-    min-height: 100vh;
-  }
+body{
+  background: url(background.png) no-repeat center;
+  background-size: cover;
+  min-height: 100vh;
+}
 .header .navbar {
-    background-color: transparent !important;
-  } 
+  background-color: transparent !important;
+}
+.nav > li > a:hover{
+  background-color:#FCC;
+}
 #content{
-    position: relative;
-    display: inline-block;
-    text-align: left;
-}    
+  width: 100%;
+  text-align: justify;
+}   
+#footer{
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  background-color: whitesmoke;
+  
+}
+h1{
+  
+}
+i{
+  color: black;
+  font-size: 50px;
+}
 @font-face {
-    font-family: 'Icons';
-    src: URL('fonts/MaterialIcons-Regular.ttf') format('truetype');
-  }
-a:active{
-    color: black;
+  font-family: 'Icons';
+  src: URL('fonts/MaterialIcons-Regular.ttf') format('truetype');
 }
