--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,15 @@
   margin: 0px;
   padding: 0px;
 }
+body {
+  height: 100%;
+  position: relative;
+ }
 .navbar-nav{
 flex: 1;
 margin: auto !important;
 display: flex;
 justify-content: space-around;
-}
-.header .navbar{
-  background-color: transparent !important;
 }
 .header .navbar ul li{
   margin: 10px;  
@@ -25,19 +26,33 @@ justify-content: space-around;
 .btn, .btn:hover, .btn:active{
   border-radius: 0%;  
 }
+#content{
+  min-height: 100vh; /* will cover the 100% of viewport */
+ overflow: hidden;
+ display: block;
+ position: relative;
+ padding-bottom: 100px; /* height of your footer */
+}
 #footer{
   background-color: white;
   position: absolute;
   bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
 }
 #footer a{
-  color: black;
-  text-decoration-line: underline;
+    color: #2d2d2d;
+    text-decoration-line: underline;
 }
 #footer i{
-  color: black;
-  font-size: 50px;
+  border: 2px solid;
+  border-radius: 50%;
+  border-color: #2d2d2d;
+  color: #2d2d2d;
+  font-size: 30px;
+  padding: 10px;
+  margin: 15px;
 }
 @font-face {
   font-family: 'Icons';
@@ -51,11 +66,16 @@ justify-content: space-around;
   background-size: cover;
   min-height: 100vh;
 }
+.bg-index .header .navbar{
+  background-color: transparent !important;
+}
 .title h2{
+  color: #2d2d2d;
   margin: 3%;
   font-size: 6rem;
 }
 .subtitle h5{
+  color: #2d2d2d;
   margin: 3%;
   font-size: 2rem;
 }
@@ -68,5 +88,40 @@ justify-content: space-around;
 
 /* ESTILO PORTFOLIO */
 .bg-portfolio{
-  background: #c8c8c8;
+  background: #e8e8e8;
+}
+.bg-portfolio .header .navbar{
+  background-color: #e8e8e8 !important;
+}
+
+/* ESTILO CONTACTO */
+.bg-contacto{
+  background: #e8e8e8;
+}
+.bg-contacto .header .navbar{
+  background-color: #e8e8e8 !important;
+}
+.titleC h1{
+  padding: 5px;
+  margin: 5%;
+  font-size: 6rem;
+}
+.subtitleC h2{
+  margin: 4%;
+  font-size: 2rem;
+}
+.form-control{
+  background: #e8e8e8;
+  border-right: none;
+  border-left: none;
+  border-top: none;
+  border-bottom: solid;
+  border-bottom-color: #2d2d2d;
+  border-radius: 0%;
+}
+.form-control:focus{
+  background: #e8e8e8;
+  border-bottom-color: #2d2d2d;
+  box-shadow: none;
+  outline: none;
 }
